--- a/src/main/resources/db/changelog/changes/01-create-books-table.yaml
+++ b/src/main/resources/db/changelog/changes/01-create-books-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 01-create-books-table
-      author: mateacademy
+      author: admin27
       changes:
         - createTable:
             tableName: books
@@ -42,7 +42,7 @@ databaseChangeLog:
                   type: varchar(255)
               - column:
                   name: is_deleted
-                  type: boolean
+                  type: tinyint(1)
                   defaultValueBoolean: false
                   constraints:
                     nullable: false
