--- a/src/main/resources/db/changelog/changes/12-update-roles-to-add-prefix.yaml
+++ b/src/main/resources/db/changelog/changes/12-update-roles-to-add-prefix.yaml
@@ -1,24 +1,25 @@
 databaseChangeLog:
   - changeSet:
-      id: 06-insert-roles
+      id: 12-update-roles-to-add-prefix
       author: admin27
+      preConditions:
+        - onFail: CONTINUE
+        - not:
+            columnExists:
+              tableName: roles
+              columnName: name
       changes:
-        - insert:
+        - update:
             tableName: roles
             columns:
-              - column:
-                  name: id
-                  valueNumeric: 1
               - column:
                   name: name
                   value: ROLE_ADMIN
-        - insert:
+            where: name = 'ADMIN'
+        - update:
             tableName: roles
             columns:
               - column:
-                  name: id
-                  valueNumeric: 2
-              - column:
                   name: name
                   value: ROLE_USER
-
+            where: name = 'USER'
