--- a/src/main/resources/db/changelog/changes/09-assign-role.yaml
+++ b/src/main/resources/db/changelog/changes/09-assign-role.yaml
@@ -6,10 +6,10 @@ databaseChangeLog:
         - onFail: CONTINUE
         - not:
             tableExists:
-              tableName: user_roles
+              tableName: users_roles
       changes:
         - insert:
-            tableName: user_roles
+            tableName: users_roles
             columns:
               - column:
                   name: user_id
@@ -18,7 +18,7 @@ databaseChangeLog:
                   name: role_id
                   valueNumeric: 1
         - insert:
-            tableName: user_roles
+            tableName: users_roles
             columns:
               - column:
                   name: user_id
@@ -27,7 +27,7 @@ databaseChangeLog:
                   name: role_id
                   valueNumeric: 2
         - insert:
-            tableName: user_roles
+            tableName: users_roles
             columns:
               - column:
                   name: user_id
@@ -36,7 +36,7 @@ databaseChangeLog:
                   name: role_id
                   valueNumeric: 2
         - insert:
-            tableName: user_roles
+            tableName: users_roles
             columns:
               - column:
                   name: user_id
