--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/online_book_store?serverTimezo
 spring.datasource.username=root
 spring.datasource.password=mateAc11
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 server.servlet.context-path=/api
+
+jwt.expiration=3000000
+jwt.secret=hellomateshellomateshellomateshellomatesttttttttt
