--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=mateAc11
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+jwt.expiration=3000000
+jwt.secret=hellomateshellomateshellomateshellomates
