--- a/src/main/resources/db/changelog/changes/14-create-books-categories-table.yaml
+++ b/src/main/resources/db/changelog/changes/14-create-books-categories-table.yaml
@@ -1,21 +1,21 @@
 databaseChangeLog:
   - changeSet:
-      id: 14-create-book-category-table
+      id: 14-create-books-categories-table
       author: admin27
       preConditions:
         - onFail: CONTINUE
         - not:
             tableExists:
-              tableName: book_category
+              tableName: books_categories
         - not:
             foreignKeyConstraintExists:
-              foreignKeyName: fk_book_category_book
+              foreignKeyName: fk_books_categories_book
         - not:
             foreignKeyConstraintExists:
-              foreignKeyName: fk_book_category_category
+              foreignKeyName: fk_books_categories_category
       changes:
         - createTable:
-            tableName: book_category
+            tableName: books_categories
             columns:
               - column:
                   name: book_id
@@ -30,16 +30,16 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
         - addForeignKeyConstraint:
-            baseTableName: book_category
+            baseTableName: books_categories
             baseColumnNames: book_id
-            constraintName: fk_book_category_book
+            constraintName: fk_books_categories_book
             referencedTableName: books
             referencedColumnNames: id
             onDelete: CASCADE
         - addForeignKeyConstraint:
-            baseTableName: book_category
+            baseTableName: books_categories
             baseColumnNames: category_id
-            constraintName: fk_book_category_category
+            constraintName: fk_books_categories_category
             referencedTableName: categories
             referencedColumnNames: id
             onDelete: CASCADE
