--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,9 @@ databaseChangeLog:
       file: db/changelog/changes/13-create-categories-table.yaml
   - include:
       file: db/changelog/changes/14-create-books-categories-table.yaml
+  - include:
+      file: db/changelog/changes/15-create-shopping-carts-table.yaml
+  - include:
+      file: db/changelog/changes/16-create-cart-items-table.yaml
+  - include:
+      file: db/changelog/changes/17-create-shopping-carts-cart-items-table.yaml
