--- a/src/main/resources/db/changelog/changes/18-create-orders-table.yaml
+++ b/src/main/resources/db/changelog/changes/18-create-orders-table.yaml
@@ -1,19 +1,20 @@
 databaseChangeLog:
   - changeSet:
-      id: 15-create-shopping-carts-table
+      id: 18-create-orders-table
       author: admin27
       preConditions:
         - onFail: CONTINUE
         - not:
             tableExists:
-              tableName: shopping_carts
+              tableName: orders
       changes:
         - createTable:
-            tableName: shopping_carts
+            tableName: orders
             columns:
               - column:
                   name: id
                   type: bigint
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -23,14 +24,34 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: status
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: total
+                  type: decimal(19,2)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: order_date
+                  type: timestamp
+                  constraints:
+                    nullable: false
+              - column:
+                  name: shipping_address
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+              - column:
                   name: is_deleted
                   type: TINYINT(1)
                   defaultValueBoolean: false
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            baseTableName: shopping_carts
+            baseTableName: orders
             baseColumnNames: user_id
             referencedTableName: users
             referencedColumnNames: id
-            constraintName: fk_shopping_cart_user
+            constraintName: fk_orders_user
