--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -26,4 +26,8 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/16-create-cart-items-table.yaml
   - include:
-      file: db/changelog/changes/17-create-shopping-carts-cart-items-table.yaml
+      file: db/changelog/changes/18-create-orders-table.yaml
+  - include:
+      file: db/changelog/changes/19-create-order-items-table.yaml
+  - include:
+      file: db/changelog/changes/20-assign-role-admin-to-user-id-43.yaml
